--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
+    "@svgr/webpack": "^8.1.0",
     "boxicons": "^2.1.4",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
